--- a/Mees-project/package.json
+++ b/Mees-project/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.33.2",
     "vue": "^3.3.4"
   },
   "devDependencies": {
