--- a/Mees-project/package.json
+++ b/Mees-project/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.33.2",
+    "dotenv": "^16.3.1",
     "vue": "^3.3.4"
   },
   "devDependencies": {
